5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4429/executions/1594_1806.log
== TEST (2019-04-22 01:16:39) 
-- CODE:
from math import *
np=float(input("digite o numero de possoas: "))
p=(1-(factorial(365))/(fctorial(365-np))*(1/(365**np)))
print=(round(p, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    p=(1-(factorial(365))/(fctorial(365-np))*(1/(365**np)))
NameError: name 'fctorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 01:17:12) 
-- CODE:
from math import *
np=float(input("digite o numero de possoas: "))
p=(1-(factorial(365))/(factorial(365-np))*(1/(365**np)))
print=(round(p, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    p=(1-(factorial(365))/(fctorial(365-np))*(1/(365**np)))
NameError: name 'fctorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 01:17:37) 
-- CODE:
from math import *
np=float(input("digite o numero de possoas: "))
p=(1-(factorial(365))/(factorial(365-np))*(1/(365**np)))
print=(round(p, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    p=(1-(factorial(365))/(fctorial(365-np))*(1/(365**np)))
NameError: name 'fctorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 01:19:01) 
-- CODE:
from math import *
np=float(input("digite o numero de possoas: "))
p=(1-(factorial(365))/(factorial(365-np))*(1/(365**np)))
print=(round(p, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    p=(1-(factorial(365))/(fctorial(365-np))*(1/(365**np)))
NameError: name 'fctorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 01:19:05) 
-- CODE:
from math import *
np=float(input("digite o numero de possoas: "))
p=(1-(factorial(365))/(factorial(365-np))*(1/(365**np)))
print=(round(p, 2))

-- EXECUTION TIME:
0.181282
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:

-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:

-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 01:19:08) 
-- CODE:
from math import *
np=float(input("digite o numero de possoas: "))
p=(1-(factorial(365))/(factorial(365-np))*(1/(365**np)))
print=(round(p, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    p=(1-(factorial(365))/(fctorial(365-np))*(1/(365**np)))
NameError: name 'fctorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 01:20:06) 
-- CODE:
from math import *
np=float(input("digite o numero de possoas: "))
p=(1-(factorial(365))/(factorial(365)-(np))*(1/(365**np)))
print=(round(p, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    p=(1-(factorial(365))/(factorial(365)-(np))*(1/(365**np)))
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 01:20:44) 
-- CODE:
from math import *
n=float(input("digite o numero de possoas: "))
p=(1-(factorial(365))/(factorial(365)-(n))*(1/(365**n)))
print=(round(p, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    p=(1-(factorial(365))/(factorial(365)-(n))*(1/(365**n)))
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 01:21:00) 
-- CODE:
from math import *
n=float(input("digite o numero de possoas: "))
p=(1-(factorial(365))/(factorial(365-(n))*(1/(365**n)))
print=(round(p, 2))

-- ERROR:
File "XXXX", line 4
    print=(round(p, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 01:21:34) 
-- CODE:
from math import *
n=float(input("digite o numero de possoas: "))
p=(1-((factorial(365))/(factorial(365-(n)))*(1/(365**n)))
print=(round(p, 2))

-- ERROR:
File "XXXX", line 4
    print=(round(p, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 01:22:11) 
-- CODE:
from math import *
n=float(input("digite o numero de possoas: "))
p=(1-(((factorial(365))/(factorial(365-n)))*(1/(365**n)))
print=(round(p, 2))

-- ERROR:
File "XXXX", line 4
    print=(round(p, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 12:57:45) 
-- CODE:
from math import *
n=float(input("digite o numero de possoas: "))
p=(1-(((factorial(365))/(factorial(365-n)))*(1/(365**n)))
print=(round(p*100, 2))

-- EXECUTION TIME:
0.207063
-- ERROR:
  File "/home/codebench/codes/1594/1806/main.py", line 4
    print=(round(p*100, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 12:58:42) 
-- CODE:
from math import *
n=float(input("digite o numero de possoas: "))
p=(1-(((factorial(365))/(factorial(365-n)))*(1/(365**n)))
print(round(p*100, 2))

-- EXECUTION TIME:
0.14817
-- ERROR:
  File "/home/codebench/codes/1594/1806/main.py", line 4
    print(round(p*100, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 12:58:49) 
-- CODE:
from math import *
n=float(input("digite o numero de possoas: "))
p=(1-(((factorial(365))/(factorial(365-n)))*(1/(365**n)))
print(round(p*100, 2))

-- EXECUTION TIME:
0.133405
-- ERROR:
  File "/home/codebench/codes/1594/1806/main.py", line 4
    print(round(p*100, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 13:00:21) 
-- CODE:
from math import *
n=float(input("digite o numero de possoas: "))
p=1-((factorial(365))/(factorial(365-n)))*(1/(365**n))
print(round(p*100, 2))

-- EXECUTION TIME:
0.191915
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
